# lidlffmpeg

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/myndkapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  FFmpeg.cpp  FFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  micro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/example/myndkapplication/: MainActivity.kt  Player.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/myndkapplication/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
